ci(denopendabot): run only on weekdays

--- a/.github/workflows/denopendabot.yml
+++ b/.github/workflows/denopendabot.yml
@@ -3,7 +3,7 @@ name: Denopendabot
 on:
   workflow_dispatch:
   schedule:
-    - cron: "0 0 * * *" # modify to your convenient time
+    - cron: "0 0 * * 1-5" # modify to your convenient time
 
 jobs:
   run:
